[gd_scene load_steps=3 format=3 uid="uid://cidhfsmtpjwt2"]

[ext_resource type="Script" uid="uid://dd1glogpgqk1a" path="res://Assets/Scenes/ToolTipTrigger.gd" id="1_gp4pk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1qng1"]

[node name="ToolTip" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1qng1")
script = ExtResource("1_gp4pk")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
